    * The sha1 for files in a repository could be left as NULL improperly
      for some cases involving shadows. This has been fixed, and a repository
      migration to version 17.3 has been provided to resolve this on
      existing repositories.
    * Group pre-execution scripts now run exactly before any package that
      is part of the group, instead of at the very beginning. (CNY-2705)

Changes in 2.0.45:
  o New Features:
    * The standalone Conary repository server now prints a message if
      it fails to import the Conary REST api.
    * Added the restore command, which restores file ownership to troves
      from which they were removed (because of a remove operation or
      --replace-files).
    * The addGitSnapshot action now accepts a branch= argument.
      (CNY-2368)

  o Internal Changes:
    * Fetching path hashes from a changeset now uses absolute trove info
      when available (which it is for any recent enough server), instead
      of merging differential trove info with database trove info, which
      significantly speeds up update planning.
    * Database operations now use the TRUNCATE command where available,
      which may speed up some repository queries.
    * An internal API used for emulating repository access by certain
      roles previously did not function when given a specific set of
      roles; this has been corrected.

  o Bug Fixes:
    * A consistent exception is now raised when bad XML-RPC data is fed
      into conary's parser on systems without the sgmlop package
      installed. (CNY-3180)
    * An error in handling queries for labels sharing the host name
      component has been fixed. (CNY-3187)

Changes in 2.0.44:
  o New Features:
    * Conary can now be configured with a set of certificate authorities
      (trustedCerts) against which all secure repository access will be
      validated. (CNY-2735)
    * Conary now logs the starting, output, and error exit codes of