@@ -23,6 +23,8 @@ Changes in @NEW@:
       existing repositories.
     * Group pre-execution scripts now run exactly before any package that
       is part of the group, instead of at the very beginning. (CNY-2705)
+    * Group pre-execution scripts no longer unnecessarily fetch
+      information they already have from the repostitiory. (CNY-3196)
 
 Changes in 2.0.45:
   o New Features:
